# gametheorycw

./: HOW_THE_GAME_WORKS.md  README.md  pyproject.toml
COMP34612_Student/: comp34612_project.ipynb
COMP34612_Student/comp34612/: ~$data.xlsx
Kareem/: colab_bayesian_leader.py
data/: run_init_against_mk1.xlsx  run_init_against_mk2.xlsx  run_init_against_mk3.xlsx  run_memory_probe_mk1.xlsx  run_memory_probe_mk2.xlsx  run_memory_probe_mk3.xlsx  run_rls_against_mk1.xlsx  run_rls_against_mk2.xlsx  run_rls_against_mk3.xlsx
notebooks/: eda.ipynb  eda_conclusions.md
src/: data_loader.py  optimisation.py  utils.py
src/leaders/: rls.md  rls.py
submissions/: colab_probe_init.py  colab_probe_memory.py  colab_rls_leader.py
tests/: evaluate_rls.py  test_rls.py  test_utils.py
