[project]
name = "gametheorycw"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "xlsxwriter>=3.2.9",
]
